--- a/automations/lights.yaml
+++ b/automations/lights.yaml
@@ -25,8 +25,8 @@
     to: 'on'
   condition:
     - condition: state
-      entity_id: sun.sun
-      state: 'below_horizon'
+      entity_id: binary_sensor.dark_outside
+      state: 'on'
   action:
     service: switch.turn_on
     entity_id: switch.hallway_light
@@ -49,8 +49,8 @@
     to: 'on'
   condition:
     - condition: state
-      entity_id: sun.sun
-      state: 'below_horizon'
+      entity_id: binary_sensor.dark_outside
+      state: 'on'
   action:
     - service_template: >
         {% if is_state("input_boolean.kids_night_light", "off") %}script.home_light
@@ -69,8 +69,8 @@
     to: 'on'
   condition:
     - condition: state
-      entity_id: sun.sun
-      state: 'below_horizon'
+      entity_id: binary_sensor.dark_outside
+      state: 'on'
   action:
     - service_template: >
         {% if is_state("input_boolean.kids_night_light", "off") %}script.home_light
@@ -102,7 +102,7 @@
   condition:
     - condition: template
       value_template: >
-        {{ int(states('sensor.toilet_illumination')) <= 10 or states('sun.sun') == 'below_horizon' }}
+        {{ int(states('sensor.toilet_illumination')) <= 10 or states('binary_sensor.dark_outside') == 'on' }}
   action:
     service_template: >
         {% if is_state("input_boolean.night_mode", "on") %} script.night_light
@@ -130,7 +130,7 @@
   condition:
     - condition: template
       value_template: >
-        {{ int(states('sensor.bathroom_illumination')) <= 10 or states('sun.sun') == 'below_horizon' }}
+        {{ int(states('sensor.bathroom_illumination')) <= 10 or states('binary_sensor.dark_outside') == 'on' }}
   action:
     service_template: >
         {% if is_state("input_boolean.night_mode", "on") %} script.night_light
@@ -157,8 +157,8 @@
     to: 'home'
   condition:
     - condition: state
-      entity_id: sun.sun
-      state: 'below_horizon'
+      entity_id: binary_sensor.dark_outside
+      state: 'on'
   action:
     - service: switch.turn_on
       entity_id: switch.kitchen_light
