--- a/integrations/binary_sensor.yaml
+++ b/integrations/binary_sensor.yaml
@@ -24,7 +24,7 @@
       value_template: >
         {{
             state_attr("sun.sun", "elevation") < 0
-            or states('sensor.openweathermap_cloud_coverage') | int > 95
+            # or states('sensor.openweathermap_cloud_coverage') | int > 95
         }}
     dark_upstairs:
       value_template: >
