--- a/automations/automations.yaml
+++ b/automations/automations.yaml
@@ -163,8 +163,8 @@
   trigger:
     - platform: state
       entity_id: media_player.philips_tv
-      from: 'on'
-      to: 'playing'
+      from: 'off'
+      to: 'on'
   action:
     - service: media_player.turn_off
       entity_id:
