--- a/automations/lights.yaml
+++ b/automations/lights.yaml
@@ -31,7 +31,7 @@
   condition:
     - condition: template
       value_template: >
-        {{ is_state('binary_sensor.dark_outside', True) or int(states('sensor.illumination_upstairs')) <= 10 }}
+        {{ is_state('binary_sensor.dark_outside', True) or int(states('sensor.illumination_downstairs')) <= 10 }}
   action:
     - service_template: >
         {% if is_state("input_boolean.kids_night_light", "off") %}script.home_light
