--- a/scripts/scripts.yaml
+++ b/scripts/scripts.yaml
@@ -37,11 +37,10 @@ morning:
         option: 'Český rozhlas Radiožurnál'
     - service: switch.turn_on
       entity_id: switch.kitchen_light
+    - service: light.turn_on
+      entity_id: light.tv_lamp
     - service: script.home_light
-      data:
-        entity_id:
-          - light.dining_room_light
-          - light.tv_lamp
+      entity_id: light.dining_room_light
     - service: select.select_option
       entity_id: select.front_door_chime_volume
       data:
