--- a/scripts/scripts.yaml
+++ b/scripts/scripts.yaml
@@ -37,12 +37,21 @@ morning:
         option: 'Český rozhlas Radiožurnál'
     - service: switch.turn_on
       entity_id: switch.kitchen_light
+    - service: script.home_light
+      entity_id: light.dining_room_light
+    - service: media_player.volume_set
+      data:
+        volume_level: 0.1
+      entity_id:
+        - media_player.jbl_link_music_1168
+        - media_player.jbl_link_music_09aa
+        - media_player.living_room_speaker
+    - service: media_player.volume_set
+      data:
+        volume_level: 0.2
+      entity_id: media_player.kitchen_display
     - service: light.turn_on
       entity_id: light.tv_lamp
-    - service: script.home_light
-      data:
-        entity_id:
-          - light.dining_room_light
     - service: select.select_option
       entity_id: select.front_door_chime_volume
       data:
