--- a/integrations/binary_sensor.yaml
+++ b/integrations/binary_sensor.yaml
@@ -15,7 +15,7 @@
       value_template: >
         {{
             is_state('light.office_lamp', 'on')
-            or is_state('device_tracker.yhn406f2qq_eth', 'home')
+            or is_state('device_tracker.dell_dock_eth', 'home')
         }}
     dark_outside:
       value_template: >
