--- a/integrations/sensor.yaml
+++ b/integrations/sensor.yaml
@@ -24,8 +24,11 @@
       friendly_name: "Washing Machine"
       value_template: >
         {% set washer_state = states('sensor.washing_machine_washer_job_state') %}
-        {% set off_states = ["none", "finish","weightSensing", "delayWash"] %}
+        {% set off_states = ["none", "finish", "delayWash"] %}
         {%- if washer_state in off_states -%}Off
+        {%- elif washer_state == "weightSensing" -%}Weighing
+        {%- elif washer_state == "delayWash" -%}Waiting
+        {%- elif washer_state == "preWash" -%}Pre-wash
         {%- elif washer_state == "rinse" -%}Rinsing
         {%- elif washer_state == "spin" -%}Spinning
         {%- elif washer_state == "wash" -%}Washing
