--- a/integrations/sensor.yaml
+++ b/integrations/sensor.yaml
@@ -24,7 +24,7 @@
       friendly_name: "Washing Machine"
       value_template: >
         {% set washer_state = states('sensor.washing_machine_washer_job_state') %}
-        {% set off_states = ["none", "finish", "delayWash"] %}
+        {% set off_states = ["none", "finish"] %}
         {%- if washer_state in off_states -%}Off
         {%- elif washer_state == "weightSensing" -%}Weighing
         {%- elif washer_state == "delayWash" -%}Waiting
