Limit washer status notifications

--- a/automations/notifications.yaml
+++ b/automations/notifications.yaml
@@ -7,6 +7,9 @@
       value_template: >
         {{ trigger.to_state.state != "Weighing" and
           trigger.to_state.state != "Delay" and
+          trigger.to_state.state != "Waiting" and
+          trigger.to_state.state != "Pre-wash" and
+          trigger.to_state.state != "Rinsing" and
           trigger.to_state.state != unknown and
           trigger.from_state.state != unknown and
           trigger.to_state.state != trigger.from_state.state }}
