--- a/scripts/rooms.yaml
+++ b/scripts/rooms.yaml
@@ -9,6 +9,11 @@ all_rooms_off:
 
 downstairs_off:
   sequence:
+    - service: media_player.turn_off
+      entity_id:
+        - media_player.shield
+        - media_player.downstairs_speakers
+        - media_player.virgin_tv
     - service: light.turn_off
       entity_id:
         - light.living_room_lamp
@@ -23,10 +28,6 @@ downstairs_off:
         - switch.christmas_tree
     - service: script.turn_xbox_off
     - service: script.turn_tv_off
-    - service: media_player.turn_off
-      entity_id:
-        - media_player.downstairs_speakers
-        - media_player.virgin_tv
 
 hallway_off:
   sequence:
