--- a/scripts/scripts.yaml
+++ b/scripts/scripts.yaml
@@ -36,27 +36,20 @@ morning:
   sequence:
     - service: input_boolean.turn_off
       entity_id: input_boolean.night_mode
+    - service: script.home_light
+      data:
+        entity_id:
+          - light.dining_room_light
     - service: input_select.select_option
       data:
         entity_id: input_select.play_radio_downstairs
         option: 'Český rozhlas Radiožurnál'
     - service: switch.turn_on
-      entity_id: switch.kitchen_light
-    - service: script.home_light
-      data:
-        entity_id:
-          - light.dining_room_light
-    - service: media_player.volume_set
-      data:
-        volume_level: 0.1
-      entity_id:
-        - media_player.jbl_link_music_1168
-        - media_player.jbl_link_music_09aa
-        - media_player.living_room_speaker
-    - service: media_player.volume_set
-      data:
-        volume_level: 0.2
-      entity_id: media_player.kitchen_display
+      entity_id: 
+        - switch.kitchen_light
+        - switch.tv_socket
+        - switch.soundbar
+        - switch.subwoofer
     - service: number.set_value
       entity_id: number.front_door_homebase_chime_ringtone_volume
       data:
@@ -80,18 +73,18 @@ bedtime:
           data:
             entity_id: switch.schedule_living_room_heating_workday
             time: 00:00:00
+    - service: script.downstairs_off
     - service: input_boolean.turn_on
       entity_id: input_boolean.night_mode
     - service: script.sunset_bedroom
     - service: script.hallway_off
     - service: script.office_off
-    - service: script.downstairs_off
-    - condition: state
-      entity_id: input_boolean.guest_mode
-      state: "on"
-    - service: script.night_light
-      data:
-        entity_id: light.upstairs_hall_light
+    - service: switch.turn_off
+      entity_id:
+        - switch.kid_s_room_night_light
+        - switch.tv_socket
+        - switch.soundbar
+        - switch.subwoofer
 
 kids_bedtime:
   sequence:
@@ -118,6 +111,7 @@ kids_bedtime:
         value: 1
     - service: switch.turn_on
       entity_id:
+        - switch.kid_s_room_night_light
         - switch.tv_socket
         - switch.soundbar
         - switch.subwoofer
